--- a/IMAGE GALLERY.html
+++ b/IMAGE GALLERY.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
 
         
-        <link rel = "stylesheet" type = "text/css" href = "CSS/IMAGE_GALLERY_STYLE.css">
+        <link rel = "stylesheet" type = "text/css" href = "CSS/IMAGE_GALLERY.css">
         <link rel = "stylesheet" type = "text/css" href = "C:\Users\Shadik Hasan\Desktop\WEB PAGE\fontawesome-free-5.15.0-web\css/all.css">
     
     </head>
