--- a/Taking Screenshoots.html
+++ b/Taking Screenshoots.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/ec8ab4f226.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/Taking Screenshoots.css">
+    
     <title>Taking Screenshoots</title>
 </head>
 <body>
@@ -15,9 +16,11 @@
     <button id="src-btn">Capture Screenshoot</button>
     <div class="src-preview">
         <div class="screenshoot">
-            <i id="close-btn" class="fas fa-xmark"></i>
+            <i id="close-btn" class="fas fa-check"></i>
             <img src="" alt="Screenshoot">
         </div>
     </div>
+
+    <script src="JS/Taking Screenshoots.js"></script>
 </body>
 </html>
