--- a/Taking Screenshoots.html
+++ b/Taking Screenshoots.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/ec8ab4f226.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="CSS/Taking Screenshoots.css">
     
     <title>Taking Screenshoots</title>
@@ -16,7 +16,7 @@
     <button id="src-btn">Capture Screenshoot</button>
     <div class="src-preview">
         <div class="screenshoot">
-            <i id="close-btn" class="fas fa-check"></i>
+            <i id="close-btn" class="fas fa-xmark"></i>
             <img src="" alt="Screenshoot">
         </div>
     </div>
