Add Fontawsome Cdn

--- a/IMAGE GALLERY.html
+++ b/IMAGE GALLERY.html
@@ -11,7 +11,7 @@
 
         
         <link rel = "stylesheet" type = "text/css" href = "CSS/IMAGE_GALLERY.css">
-        <link rel = "stylesheet" type = "text/css" href = "C:\Users\Shadik Hasan\Desktop\WEB PAGE\fontawesome-free-5.15.0-web\css/all.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     </head>
     <body>
