--- a/CLOCK DIGITAL.html
+++ b/CLOCK DIGITAL.html
@@ -4,7 +4,7 @@
         <meta charset = "utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>DIGITAL CLOCK</title>
-        <script src="https://kit.fontawesome.com/ec8ab4f226.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel = "stylesheet" type = "text/css" href = "CSS/CLOCK_DIGITAL.css">
                 
         
